<resources>
    <string name="app_name">Plant Care</string>
    <string name="default_web_client_id">920676430522-r7fkfpmvsf90h1ot2dk0h9q5som15les.apps.googleusercontent.com</string>
    <string name="permission">Izin Diperlukan</string>
    <string name="permission_message">Aplikasi membutuhkan izin kamera untuk berfungsi. Harap aktifkan izin di Pengaturan.</string>
    <string name="open_settings">Buka Pengaturan</string>
    <string name="cancel">Batal</string>
    <string name="permission_granted">Permintaan izin diberikan</string>
    <string name="permission_denied">Permintaan izin ditolak</string>
    <string name="title">Tanamanmu terkena penyakit</string>
    <string name="namapenyakit">Nama Penyakit</string>
    <string name="tingkatakurasi">Tingkat Akurasi</string>
    <string name="presentaseakurasi">97%</string>
    <string name="carapenanganan">Cara Penanganan:</string>
    <string name="deskripsi_penyakit">Bacterial spot pada tanaman dapat ditangani dengan aplikasi fungisida tembaga di awal siklus penyakit, pembuangan daun yang terinfeksi pada tanaman hias, serta penambahan agens hayati seperti Corynebacterium dan PGPR (Plant Growth Promoting Rhizobacteria) untuk meningkatkan ketahanan tanaman terhadap bakteri.</string>
    <string name="selamat">Selamat</string>
    <string name="datang">datang!</string>
    <string name="deskripsi_pembuka">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor</string>
    <string name="ilustrasi_selamat_datang">Illustration</string>
    <string name="sign_up">Sign Up With</string>
    <string name="sign_up_with_google">Continue with Google</string>
    <string name="plant">Plant</string>
    <string name="care">.Care</string>
    <string name="illustration_on_boarding">Illustration</string>
    <string name="mulai">Mulai</string>
    <string name="nama_penyakit_card">Nama Penyakit</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="presentase_penyakit">97%</string>
    <string name="sumber_berita">Sumber Berita</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="nama_tanaman_card_recent_plant">Name</string>
    <string name="daftar_tanaman">Daftar Tanaman</string>
    <string name="hi">Hi,</string>
    <string name="nama_user">User</string>
    <string name="pembuka_home">Ayo pelihara tanamanmu\ndengan baik</string>
    <string name="recent_plant">Recent Plant</string>
    <string name="timeline">Timeline</string>
    <string name="profil">Profil</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="bantuan">Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="beri_kami_nilai">Beri kami nilai</string>
    <string name="keluar">Keluar</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="tomat">Tomat</string>
    <string name="mangga">Mangga</string>
    <string name="cabai">Cabai</string>
    <string name="pelihara_tanamanmu">Pelihara Tanamanmu</string>
    <string name="powered_by">Powered by</string>
    <string name="team">Team</string>
    <string name="nothing">Belum ada hasil scan</string>
</resources>